--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,7 +10,7 @@
     tools:showIn="@layout/app_bar_main">
 
     <RelativeLayout
-        android:id="@+id/fragment_container"
+        android:id="@+id/web_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
