--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,7 +5,7 @@
         <item
             android:id="@+id/nav_bookmark"
             android:icon="@drawable/ic_menu_bookmark"
-            android:title="Bookmark" />
+            android:title="@string/drawer_bookmark" />
         <item
             android:id="@+id/nav_history"
             android:icon="@drawable/ic_menu_history"
