--- a/app/src/main/res/layout/fragment_web.xml
+++ b/app/src/main/res/layout/fragment_web.xml
@@ -16,7 +16,7 @@
 
     <ProgressBar
         android:id="@+id/loading_spinner"
-        style="@android:style/Widget.ProgressBar.Inverse"
+        style="@style/Widget.AppCompat.ProgressBar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
